--- a/wiki/RoadMap.wiki
+++ b/wiki/RoadMap.wiki
@@ -1,11 +1,11 @@
 #summary A bullet point road map for gwt-comet
-  * support for GWT 2.0's [http://code.google.com/p/google-web-toolkit/wiki/RpcDirectEval direct-eval RPC]
+  * ~~support for GWT 2.0's [http://code.google.com/p/google-web-toolkit/wiki/RpcDirectEval direct-eval RPC]~~ (included in 1.1.0)
   * support for [http://dev.w3.org/html5/websockets/ web sockets] now supported by [http://blog.chromium.org/2009/12/web-sockets-now-available-in-google.html Chrome] and soon to be supported by [https://bugzilla.mozilla.org/show_bug.cgi?id=472529 FireFox].
   * subdomain support
   * Async IO
     * [http://jcp.org/en/jsr/detail?id=315 JSR 315: Java Servlet 3.0 Specification]
     * [http://docs.sun.com/app/docs/doc/820-4496/ghgxk?a=view Grizzly Comet]
     * [http://tomcat.apache.org/tomcat-6.0-doc/aio.html Apache Tomcat 6.0 - Advanced IO and Tomcat]
-  * overlapping requests to mask connection refresh establishment latency
+  * ~~overlapping requests to mask connection refresh establishment latency~~ (included in 1.0.11)
   * JMS integration
   * support for sharing a comet connection across multiple browser windows/tabs
