Edited wiki page through web user interface.

--- a/wiki/RoadMap.wiki
+++ b/wiki/RoadMap.wiki
@@ -9,3 +9,5 @@
   * ~~overlapping requests to mask connection refresh establishment latency~~ (included in 1.0.11)
   * JMS integration
   * support for sharing a comet connection across multiple browser windows/tabs
+  * support for gwt.elideTypeNamesFromRPC
+  * support for rpc.blacklist
