--- a/wiki/RoadMap.wiki
+++ b/wiki/RoadMap.wiki
@@ -1,4 +1,5 @@
 #summary A bullet point road map for gwt-comet
+#labels Featured
   * ~~support for GWT 2.0's [http://code.google.com/p/google-web-toolkit/wiki/RpcDirectEval direct-eval RPC]~~ (included in 1.1.0)
   * support for [http://dev.w3.org/html5/websockets/ web sockets] now supported by [http://blog.chromium.org/2009/12/web-sockets-now-available-in-google.html Chrome] and soon to be supported by [https://bugzilla.mozilla.org/show_bug.cgi?id=472529 FireFox].
   * ~~subdomain support~~ (included in 1.1.1)
