--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -1,4 +1,5 @@
 #summary Getting started
+#labels Featured
 = Getting Started =
 
 This getting started guide gives an overview and example code for setting up and processing of Comet messages from the client and server perspective. If you have any questions, thoughts, or ideas send them to the [http://groups.google.com/group/gwt-comet discussion group].
