--- a/wiki/ReleaseNotes.wiki
+++ b/wiki/ReleaseNotes.wiki
@@ -3,6 +3,16 @@
 
 = Release Notes =
 
+== 1.1.3 ==
+
+  * Added support for updating Jetty 7's sessions last access time with out refreshing the connection.
+  * Support for IE client side message batch processing.
+  * Support for using arrays as a serialized message type. (requires two issues to be fixes in GWT [http://code.google.com/p/google-web-toolkit/issues/detail?id=1822 1922] and [http://code.google.com/p/google-web-toolkit/issues/detail?id=4657 4657])
+  * Removed System.out debugging issue 1
+  * Improved specific server fall back code.
+  * Fixed session creation logic r99
+  * Improved session creation logic r100
+
 == 1.1.2 ==
 
   * Fixed "Unexpected disconnection" error when disconnecting {{{HTTPRequestCometTransport}}} from the client side.
