--- a/wiki/RoadMap.wiki
+++ b/wiki/RoadMap.wiki
@@ -7,6 +7,7 @@
     * [http://jcp.org/en/jsr/detail?id=315 JSR 315: Java Servlet 3.0 Specification]
     * [http://docs.sun.com/app/docs/doc/820-4496/ghgxk?a=view Grizzly Comet]
     * [http://tomcat.apache.org/tomcat-6.0-doc/aio.html Apache Tomcat 6.0 - Advanced IO and Tomcat]
+    * [https://atmosphere.dev.java.net/ Atmosphere support]
   * ~~overlapping requests to mask connection refresh establishment latency~~ (included in 1.0.11)
   * JMS integration
   * support for sharing a comet connection across multiple browser windows/tabs
