--- a/wiki/ReleaseNotes.wiki
+++ b/wiki/ReleaseNotes.wiki
@@ -3,6 +3,13 @@
 
 = Release Notes =
 
+== 1.1.4 ==
+
+  * Fix issue 1
+  * Rewritten test example.
+  * Chat and Test examples packaged into a war file.
+  * Fixed refresh logic when no sessions as per [http://groups.google.com/group/gwt-comet/browse_thread/thread/c7125628a8d867a9 discussion]
+
 == 1.1.3 ==
 
   * Added support for updating Jetty 7's sessions last access time with out refreshing the connection.
