--- a/wiki/WebSockets.wiki
+++ b/wiki/WebSockets.wiki
@@ -5,6 +5,8 @@
 
 gwt-web-sockets provides a simple GWT wrapper around the browsers native Web Socket implementation.
 
+Currently only development releases of Chrome support this so don't expect it to work in other browsers. This is not (yet) a cross browser Web Socket implementation.
+
 Its simple design is based around GWT's {{{com.google.gwt.xhr.client.XMLHttpRequest}}}.
 
 === GWT Module Dependency ===
