Edited wiki page EventSource through web user interface.

--- a/wiki/EventSource.wiki
+++ b/wiki/EventSource.wiki
@@ -13,7 +13,7 @@ Its simple design is based around GWT's {{{com.google.gwt.xhr.client.XMLHttpRequ
 
 Download gwt-event-source.jar from the [http://code.google.com/p/gwt-comet/downloads/list download list]
 
-Firstly you need to include the following GWT module dependency in your project:
+Then you need to include the following GWT module dependency in your project:
 
 {{{
 <inherits name="net.zschech.gwt.eventsource.EventSource" />
